Fixed home page and made titles more readable

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
   font-family: sans-serif;
   color: black;
   text-align: center;
-  background: linear-gradient(purple, yellow);
+  background: linear-gradient(darkred, darkblue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -28,7 +28,7 @@ h2 {
   font-family: sans-serif;
   color: black;
   text-align: center;
-  background: linear-gradient(purple, yellow);
+  background: linear-gradient(darkred, darkblue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
